--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@700&display=swap" rel="stylesheet">
+<link rel="manifest" href="manifest.json">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+<meta name="theme-color" content="#1877f2">
+<meta name="mobile-web-app-capable" content="yes">
 <title>صورة التحدي ثابتة</title>
 <style>
 html, body{
@@ -11,44 +14,24 @@ html, body{
     padding:0;
     width:100%;
     height:100%;
-    overflow:hidden;
-    font-family: 'Tajawal', Arial, sans-serif;
+    overflow:hidden; /* يمنع التمرير */
+  font-family: 'Tajawal', Arial, sans-serif; /* الخط Tajawal */
+  /* خلفية أسود */
 }
+
+   /* النصوص على الجنبين */
 
 .side-text{
     position:absolute;
+    top:50%;
     font-size:50px;
     font-weight:bold;
     color:black;
+    text-shadow: none;
     pointer-events:none;
     white-space: nowrap;
+    transform: translateY(-50%) rotate(50deg); /* هنا تتحكم في الدوران */
 }
-
-/* نص الأولاد على الشمال */
-.left-text{
-    left:20px;
-    top:150px;
-    transform: translateY(-50%) rotate(90deg);
-}
-
-/* نص البنات على اليمين */
-.right-text{
-    right:20px;
-    top:150px;
-    transform: translateY(-50%) rotate(90deg);
-}
-
-.counter{
-    display:inline-block;
-    min-width:60px;
-    text-align:left;
-    font-size:40px;
-    font-weight:bold;
-    margin-left:15px;
-    color:black;
-}
-
-/* أزرار */
 .button {
     display:inline-block;
     padding:15px 25px;
@@ -60,52 +43,114 @@ html, body{
     cursor:pointer;
     text-align:center;
 }
+.counter{
+    display:inline-block; /* يخلي الرقم عنصر مستقل */
+    min-width:60px;       /* عرض ثابت للرقم */
+    text-align:left;
+    font-size:40px;
+    font-weight:bold;
+    margin-left:15px;
+    color:black;
+}
+/* أزرار صفراء */
 
-.red { background:#FF4D4D; color:white; }
-.yellow { background:#FFD700; color:black; }
+/* أزرار صفراء */
+.yellow {
+    background:#FFD700;
+    color:black;
+}
 
-/* حاويات الأزرار */
+/* أزرار حمراء */
+.red {
+    background:#FF4D4D;
+    color:white;
+}
+
+/* المربعات تحت النصوص */
 .left-buttons{
     position:absolute;
-    left:10px;
-    top:220px;
+    left:3px; /* نفس مكان النص */
+    top:calc(5% + 60px); /* تحت النص مباشرة */
     display:flex;
     flex-direction: column;
-    gap:10px;
+gap:15px;
 }
+
+/* مثال: دوران كل زر داخل الشمال */
+.left-buttons .button {
+    transform: translateY(-50%) rotate(90deg); /* مثال: 15° دوران */
+/* غيّر الرقم حسب الزاوية اللي تحب */
+}
+
+/* الأزرار على اليمين */
 .right-buttons{
     position:absolute;
-    right:10px;
-    top:220px;
+    left:3px; /* نفس مكان النص */
+    top:calc(70% + 60px);
     display:flex;
     flex-direction: column;
-    gap:10px;
+gap:15px;
+}
+    
+
+/* مثال: دوران كل زر داخل اليمين */
+.right-buttons .button {
+    transform: translateY(-50%) rotate(90deg); /* مثال: 15° دوران */
+} /* غيّر الرقم حسب الزاوية */
+
+
+
+
+/* نص على الشمال */
+.left-text{
+    right:20px;   /* المسافة من اليسار */
+    top:150px;     /* الارتفاع من أعلى الصفحة */
+   
+    /* زاوية الدوران للشمال */
+    transform: translateY(-50%) rotate(90deg); /* مثال: 15° دوران */
 }
 
-/* زر رجوع */
+/* نص على اليمين */
+.right-text{
+    right:20px;
+    top:80%; 
+    /* زاوية الدوران لليمين */
+    transform: translateY(-50%) rotate(90deg); /* مثال: 15° دوران */
+}
+
 .reset-button{
     position:absolute;
-    top:20px;
-    left:50%;
-    transform: translateX(-50%);
-    padding:10px 20px;
-    font-size:16px;
-    font-weight:bold;
-    background:#1877f2;
-    color:white;
-    border:none;
-    border-radius:5px;
-    cursor:pointer;
-}
+    top:calc(31% + 150px);
+    left:10px;
+    transform: translateY(-50%) rotate(90deg);
 
+    padding:5px 13px;              /* حجم مناسب */
+    font-size:13px;
+    font-weight:bold;
+
+    background:#1877f2;             /* أزرق احترافي */
+    color:white;                    /* النص أبيض */
+
+    border:none;
+    border-left:5px solid #0d5ed7;  /* حافة جانبية */
+    border-right:5px solid #0d5ed7; /* حافة جانبية */
+
+    border-radius:5px;              /* حواف ناعمة */
+    cursor:pointer;
+    z-index:10;
+
+    transition:0.3s;
+}
+ 
 img {
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    object-fit:cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     transition: transform 0.3s ease;
+    transform: translateY(-30px); /* هنا ترفع الصورة 30px */
 }
 </style>
 </head>
@@ -123,24 +168,18 @@ img {
   بنات <span class="counter" id="girlsCounter">0</span>
 </div>
 
-<!-- أزرار الأولاد -->
-<div class="left-buttons">
-    <button class="button red" onclick="addScore('boys',1); moveImage('down',1);">+1</button>
-    <button class="button red" onclick="addScore('boys',5); moveImage('down',5);">+5</button>
-</div>
+<!-- أزرار الأولاد (يسار) -->
+<button class="button red" onclick="addScore('boys',1); moveImage('down',1);">+1</button>
+<button class="button red" onclick="addScore('boys',5); moveImage('down',5);">+5</button>
 
-<!-- أزرار البنات -->
-<div class="right-buttons">
-    <button class="button yellow" onclick="addScore('girls',1); moveImage('up',1);">+1</button>
-    <button class="button yellow" onclick="addScore('girls',5); moveImage('up',5);">+5</button>
-</div>
+<!-- أزرار البنات (يمين) -->
+<button class="button yellow" onclick="addScore('girls',1); moveImage('up',1);">+1</button>
+<button class="button yellow" onclick="addScore('girls',5); moveImage('up',5);">+5</button>
+
 
 <script>
 let boysScore = 0;
 let girlsScore = 0;
-let imageOffsetY = 0;
-const maxUp = -340;
-const maxDown = 300;
 
 function addScore(team, value){
     if(team === 'boys'){
@@ -155,6 +194,7 @@ function addScore(team, value){
 function resetScores(){
     boysScore = 0;
     girlsScore = 0;
+
     document.getElementById('boysCounter').innerText = 0;
     document.getElementById('girlsCounter').innerText = 0;
 
@@ -167,21 +207,31 @@ function resetScores(){
     }, 1500);
 }
 
+
+
+let imageOffsetY = 0;
+
+// هنا نتحكم في الحد الأعلى والأدنى اللي توقف عنده الصورة
+const maxUp = -340;   // الصورة لا تتحرك لأعلى أكثر من 200px
+const maxDown = 300;    // الصورة لا تتحرك لأسفل أكثر من الموقع الأصلي
+
 function moveImage(direction, value){
-    const step = 10;
+    const step = 10; // كل +1 = 10px
     if(direction === 'up'){
         imageOffsetY -= step * value;
-        if(imageOffsetY < maxUp) imageOffsetY = maxUp;
+        if(imageOffsetY < maxUp) imageOffsetY = maxUp; // لا تتجاوز الحد الأعلى
     } else if(direction === 'down'){
         imageOffsetY += step * value;
-        if(imageOffsetY > maxDown) imageOffsetY = maxDown;
+        if(imageOffsetY > maxDown) imageOffsetY = maxDown; // لا تتجاوز الحد الأسفل
     }
+
     document.querySelector('img').style.transform = `translateY(${imageOffsetY}px)`;
 }
 
 if ("serviceWorker" in navigator) {
   navigator.serviceWorker.register("sw.js");
 }
+
 </script>
 </body>
 </html>
