--- a/index.html
+++ b/index.html
@@ -1,200 +1,188 @@
-    margin:5px;
-    font-size:20px;
-    font-weight:bold;
-    border:none;
-    border-radius:8px;
-    cursor:pointer;
-    text-align:center;
+<!DOCTYPE html>
+
+<html lang="ar">  
+<head>  
+<meta charset="UTF-8">  
+<meta name="viewport" content="width=device-width, initial-scale=1.0">  
+<!-- استدعاء خط Tajawal من Google Fonts -->  
+<link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@700&display=swap" rel="stylesheet">  
+<title>صورة التحدي ثابتة</title>  
+<style>  
+html, body{  
+    margin:0;  
+    padding:0;  
+    width:100%;  
+    height:100%;  
+    overflow:hidden; /* يمنع التمرير */  
+  font-family: 'Tajawal', Arial, sans-serif; /* الخط Tajawal */  
+  /* خلفية أسود */  
+}  /* النصوص على الجنبين */
+
+.side-text{
+position:absolute;
+top:50%;
+font-size:50px;
+font-weight:bold;
+color:black;
+text-shadow: 2px 2px 10px rgba(0,0,0,0.7);
+pointer-events:none;
+white-space: nowrap;
+transform: translateY(-50%) rotate(50deg); 
+}
+.button {
+display:inline-block;
+padding:15px 25px;
+margin:5px;
+font-size:20px;
+font-weight:bold;
+border:none;
+border-radius:8px;
+cursor:pointer;
+text-align:center;
 }
 .counter{
-    display:inline-block; /* يخلي الرقم عنصر مستقل */
-    min-width:60px;       /* عرض ثابت للرقم */
-    text-align:left;
-    font-size:40px;
-    font-weight:bold;
-    margin-left:15px;
-    color:black;
+display:inline-block; 
+min-width:60px;       
+text-align:left;
+font-size:40px;
+font-weight:bold;
+margin-left:15px;
+color:black;
 }
-/* أزرار صفراء */
 
-/* أزرار صفراء */
+
 .yellow {
-    background:#FFD700;
-    color:black;
+background:#FFD700;
+color:black;
 }
 
 /* أزرار حمراء */
 .red {
-    background:#FF4D4D;
-    color:white;
+background:#FF4D4D;
+color:white;
 }
 
-/* المربعات تحت النصوص */
+
 .left-buttons{
-    position:absolute;
-    left:3px; /* نفس مكان النص */
-    top:calc(5% + 60px); /* تحت النص مباشرة */
-    display:flex;
-    flex-direction: column;
+position:absolute;
+left:3px; 
+top:calc(5% + 60px); 
+display:flex;
+flex-direction: column;
 gap:15px;
 }
 
-/* مثال: دوران كل زر داخل الشمال */
-.left-buttons .button {
-    transform: translateY(-50%) rotate(90deg); /* مثال: 15° دوران */
-/* غيّر الرقم حسب الزاوية اللي تحب */
-}
 
-/* الأزرار على اليمين */
-.right-buttons{
-    position:absolute;
-    left:3px; /* نفس مكان النص */
-    top:calc(70% + 60px);
-    display:flex;
-    flex-direction: column;
-gap:15px;
-}
     
+.left-buttons .button {
+transform: translateY(-50%) rotate(90deg); 
 
-/* مثال: دوران كل زر داخل اليمين */
-.right-buttons .button {
-    transform: translateY(-50%) rotate(90deg); /* مثال: 15° دوران */
-} /* غيّر الرقم حسب الزاوية */
-
-
-
-
-/* نص على الشمال */
-.left-text{
-    right:20px;   /* المسافة من اليسار */
-    top:150px;     /* الارتفاع من أعلى الصفحة */
-   
-    /* زاوية الدوران للشمال */
-    transform: translateY(-50%) rotate(90deg); /* مثال: 15° دوران */
 }
 
-/* نص على اليمين */
+
+.right-buttons{
+position:absolute;
+left:3px;
+top:calc(70% + 60px);
+display:flex;
+flex-direction: column;
+gap:15px;
+}
+
+
+.right-buttons .button {
+transform: translateY(-50%) rotate(90deg); / مثال: 15° دوران /
+} 
+
+.left-text{
+right:20px;  
+top:150px;     
+
+/* زاوية الدوران للشمال */  
+transform: translateY(-50%) rotate(90deg); /* مثال: 15° دوران */
+
+}
+
+
 .right-text{
-    right:20px;
-    top:80%; 
-    /* زاوية الدوران لليمين */
-    transform: translateY(-50%) rotate(90deg); /* مثال: 15° دوران */
+right:20px;
+top:80%;
+transform: translateY(-50%) rotate(90deg); / مثال: 15° دوران */
 }
 
 .reset-button{
-    position:absolute;
-    top:calc(31% + 150px);
-    left:10px;
-    transform: translateY(-50%) rotate(90deg);
-
-    padding:5px 13px;              /* حجم مناسب */
-    font-size:13px;
-    font-weight:bold;
-
-    background:#1877f2;             /* أزرق احترافي */
-    color:white;                    /* النص أبيض */
-
-    border:none;
-    border-left:5px solid #0d5ed7;  /* حافة جانبية */
-    border-right:5px solid #0d5ed7; /* حافة جانبية */
-
-    border-radius:5px;              /* حواف ناعمة */
-    cursor:pointer;
-    z-index:10;
-
-    transition:0.3s;
+position:absolute;
+top:calc(29% + 150px); /
+left:50%
+transform:translateX(-50%);
+padding:0px 1px;       
+font-size:20px;
+font-weight:bold;
+background:none;        
+border:none;            
+color:black;            
+cursor:pointer;
+z-index:10;             
 }
- 
-img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: transform 0.3s ease;
-    transform: translateY(-30px); /* هنا ترفع الصورة 30px */
+
+img{
+position:absolute; 
+top:0;
+left:0;
+width:100%;
+height:100%;
+object-fit:cover;
+transition: transform 0.3s ease; 
 }
 </style>
-</head>
-<body>
-<button class="reset-button" onclick="resetScores()">رجوع</button>
-<img src="bj.jpg" alt="challenge">
 
-<!-- نص الأولاد -->
+</head>  
+<body>  
+<button class="reset-button" onclick="resetScores()">.</button>  
+<img src="bj.jpg" alt="challenge">  <!-- نص الرجال مع الرقم -->   
+
 <div class="side-text left-text">
-  أولاد <span class="counter" id="boysCounter">0</span>
-</div>
-
-<!-- نص البنات -->
-<div class="side-text right-text">
-  بنات <span class="counter" id="girlsCounter">0</span>
-</div>
-
-<!-- أزرار الأولاد (يسار) -->
-<button class="button red" onclick="addScore('boys',1); moveImage('down',1);">+1</button>
-<button class="button red" onclick="addScore('boys',5); moveImage('down',5);">+5</button>
-
-<!-- أزرار البنات (يمين) -->
-<button class="button yellow" onclick="addScore('girls',1); moveImage('up',1);">+1</button>
-<button class="button yellow" onclick="addScore('girls',5); moveImage('up',5);">+5</button>
-
-
-<script>
-let boysScore = 0;
-let girlsScore = 0;
-
-function addScore(team, value){
-    if(team === 'boys'){
-        boysScore += value;
-        document.getElementById('boysCounter').innerText = boysScore;
-    } else if(team === 'girls'){
-        girlsScore += value;
-        document.getElementById('girlsCounter').innerText = girlsScore;
-    }
+  رجال <span class="counter" id="menCounter">0</span>  
+</div>  
+<!-- نص النساء مع الرقم -->  
+<div class="side-text right-text">  
+  نساء <span class="counter" id="womenCounter">0</span>  
+</div>  
+<!-- أزرار الشمال -->  
+<!-- أزرار الشمال -->  
+<<!-- أزرار الشمال -->  
+<div class="left-buttons">  
+  <button class="button red" onclick="addScore('men',1); moveImage('right',1);">+1</button>  
+  <button class="button red" onclick="addScore('men',5); moveImage('right',5);">+5</button>  
+</div>  <!-- أزرار اليمين -->  <div class="right-buttons">  
+  <button class="button yellow" onclick="addScore('women',1); moveImage('left',1);">+1</button>  
+  <button class="button yellow" onclick="addScore('women',5); moveImage('left',5);">+5</button>  
+</div>  
+<script>  
+let menScore = 0;  
+let womenScore = 0;  function addScore(team, value){
+if(team === 'men'){
+menScore += value;
+document.getElementById('menCounter').innerText = menScore;
+} else if(team === 'women'){
+womenScore += value;
+document.getElementById('womenCounter').innerText = womenScore;
 }
-
+}
 function resetScores(){
-    boysScore = 0;
-    girlsScore = 0;
-
-    document.getElementById('boysCounter').innerText = 0;
-    document.getElementById('girlsCounter').innerText = 0;
-
-    const img = document.querySelector('img');
-    img.style.transition = "transform 1.5s ease";
-    imageOffsetY = 0;
-    img.style.transform = `translateY(0px)`;
-    setTimeout(() => {
-        img.style.transition = "transform 0.3s ease";
-    }, 1500);
+menScore = 0;
+womenScore = 0;
+document.getElementById('menCounter').innerText = menScore;
+document.getElementById('womenCounter').innerText = womenScore;
 }
-
-
-
 let imageOffsetY = 0;
 
-// هنا نتحكم في الحد الأعلى والأدنى اللي توقف عنده الصورة
-const maxUp = -340;   // الصورة لا تتحرك لأعلى أكثر من 200px
-const maxDown = 300;    // الصورة لا تتحرك لأسفل أكثر من الموقع الأصلي
-
-function moveImage(direction, value){
-    const step = 10; // كل +1 = 10px
-    if(direction === 'up'){
-        imageOffsetY -= step * value;
-        if(imageOffsetY < maxUp) imageOffsetY = maxUp; // لا تتجاوز الحد الأعلى
-    } else if(direction === 'down'){
-        imageOffsetY += step * value;
-        if(imageOffsetY > maxDown) imageOffsetY = maxDown; // لا تتجاوز الحد الأسفل
-    }
-
-    document.querySelector('img').style.transform = `translateY(${imageOffsetY}px)`;
+function moveImage(value){
+const step = 10; // كل +1 = 10px
+imageOffsetY -= step * value;
+document.querySelector('img').style.transform = translateY(${imageOffsetY}px);
 }
-
-if ("serviceWorker" in navigator) {
-  navigator.serviceWorker.register("sw.js");
-}
-
 </script>
-</body>
+
+</body>  
 </html>
