--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ html, body{
     font-family: 'Tajawal', Arial, sans-serif;
 }
 
+/* النصوص على الجانبين */
 .side-text{
     position:absolute;
     font-size:50px;
@@ -22,6 +23,7 @@ html, body{
     color:black;
     pointer-events:none;
     white-space: nowrap;
+    z-index: 10; /* لضمان ظهور النص فوق الصورة */
 }
 
 /* نص الأولاد على الشمال */
@@ -35,7 +37,7 @@ html, body{
 .right-text{
     right:20px;
     top:150px;
-    transform: translateY(-50%) rotate(90deg);
+    transform: translateY(-50%) rotate(-90deg); /* متقابل مع الأولاد */
 }
 
 .counter{
@@ -59,6 +61,7 @@ html, body{
     border-radius:8px;
     cursor:pointer;
     text-align:center;
+    z-index: 10; /* لتكون فوق الصورة */
 }
 
 .red { background:#FF4D4D; color:white; }
@@ -96,6 +99,7 @@ html, body{
     border:none;
     border-radius:5px;
     cursor:pointer;
+    z-index: 10; /* فوق كل العناصر */
 }
 
 img {
@@ -106,6 +110,7 @@ img {
     height:100%;
     object-fit:cover;
     transition: transform 0.3s ease;
+    z-index:1;
 }
 </style>
 </head>
@@ -142,6 +147,7 @@ let imageOffsetY = 0;
 const maxUp = -340;
 const maxDown = 300;
 
+// تحديث العدادات
 function addScore(team, value){
     if(team === 'boys'){
         boysScore += value;
@@ -152,6 +158,7 @@ function addScore(team, value){
     }
 }
 
+// إعادة تعيين العدادات وحركة الصورة
 function resetScores(){
     boysScore = 0;
     girlsScore = 0;
@@ -159,14 +166,15 @@ function resetScores(){
     document.getElementById('girlsCounter').innerText = 0;
 
     const img = document.querySelector('img');
-    img.style.transition = "transform 1.5s ease";
     imageOffsetY = 0;
+    img.style.transition = "transform 1s ease";
     img.style.transform = `translateY(0px)`;
     setTimeout(() => {
         img.style.transition = "transform 0.3s ease";
-    }, 1500);
+    }, 1000);
 }
 
+// تحريك الصورة للأعلى أو الأسفل
 function moveImage(direction, value){
     const step = 10;
     if(direction === 'up'){
@@ -179,6 +187,7 @@ function moveImage(direction, value){
     document.querySelector('img').style.transform = `translateY(${imageOffsetY}px)`;
 }
 
+// تسجيل Service Worker لو موجود
 if ("serviceWorker" in navigator) {
   navigator.serviceWorker.register("sw.js");
 }
