--- a/index.html
+++ b/index.html
@@ -1,1 +1,122 @@
 
+!DOCTYPE html>  <html lang="ar">  
+<head>  
+<meta charset="UTF-8">  
+<link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@700&display=swap" rel="stylesheet">  
+<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">  
+<title>صورة التحدي ثابتة</title>  
+<style>  
+html, body{  
+    margin:0;  
+    padding:0;  
+    width:100%;  
+    height:100%;  
+    overflow:hidden;  
+    font-family: 'Tajawal', Arial, sans-serif;  
+}  .side-text{
+position:absolute;
+font-size:50px;
+font-weight:bold;
+color:black;
+pointer-events:none;
+white-space: nowrap;
+}
+
+/* نص الأولاد على الشمال */
+.left-text{
+left:20px;
+top:150px;
+transform: translateY(-50%) rotate(90deg);
+}
+
+/* نص البنات على اليمين */
+.right-text{
+right:20px;
+top:150px;
+transform: translateY(-50%) rotate(90deg);
+}
+
+.counter{
+display:inline-block;
+min-width:60px;
+text-align:left;
+font-size:40px;
+font-weight:bold;
+margin-left:15px;
+color:black;
+}
+
+/* أزرار */
+.button {
+display:inline-block;
+padding:15px 25px;
+margin:5px;
+font-size:20px;
+font-weight:bold;
+border:none;
+border-radius:8px;
+cursor:pointer;
+text-align:center;
+}
+
+.red { background:#FF4D4D; color:white; }
+.yellow { background:#FFD700; color:black; }
+
+/* حاويات الأزرار */
+.left-buttons{
+position:absolute;
+left:10px;
+top:220px;
+display:flex;
+flex-direction: column;
+gap:10px;
+}
+.right-buttons{
+position:absolute;
+right:10px;
+top:220px;
+display:flex;
+flex-direction: column;
+gap:10px;
+}
+
+/* زر رجوع */
+.reset-button{
+position:absolute;
+top:20px;
+left:50%;
+transform: translateX(-50%);
+padding:10px 20px;
+font-size:16px;
+font-weight:bold;
+background:#1877f2;
+color:white;
+border:none;
+border-radius:5px;
+cursor:pointer;
+}
+
+img {
+position:absolute;
+top:0;
+left:0;
+width:100%;
+height:100%;
+object-fit:cover;
+transition: transform 0.3s ease;
+}
+</style>
+
+</head>  
+<body>  
+<button class="reset-button" onclick="resetScores()">رجوع</button>  
+<img src="bj.jpg" alt="challenge">  <!-- نص الأولاد -->  <div class="side-text left-text">  
+  أولاد <span class="counter" id="boysCounter">0</span>  
+</div>  <!-- نص البنات -->  <div class="side-text right-text">  
+  بنات <span class="counter" id="girlsCounter">0</span>  
+</div>  <!-- أزرار الأولاد -->  <div class="left-buttons">  
+    <button class="button red" onclick="addScore('boys',1); moveImage('down',1);">+1</button>  
+    <button class="button red" onclick="addScore('boys',5); moveImage('down',5);">+5</button>  
+</div>  <!-- أزرار البنات -->  <div class="right-buttons">  
+    <button class="button yellow" onclick="addScore('girls',1); moveImage('up',1);">+1</button>  
+    <button class="button yellow" onclick="addScore('girls',5); moveImage('up',5);">+5</button>  
