--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ transition: transform 0.3s ease;
 <img src="bj.jpg" alt="challenge">  <!-- نص الأولاد -->  <div class="side-text left-text">  
   أولاد <span class="counter" id="boysCounter">0</span>  
 </div>  <!-- نص البنات -->  <div class="side-text right-text">  
-  بنات <span class="counter" id="girlsCounter">0</span>  
+  بناتا <span class="counter" id="girlsCounter">0</span>  
 </div>  <!-- أزرار الأولاد -->  <div class="left-buttons">  
     <button class="button red" onclick="addScore('boys',1); moveImage('down',1);">+1</button>  
     <button class="button red" onclick="addScore('boys',5); moveImage('down',5);">+5</button>  
