--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>  <html lang="ar">  
+<!DOCTYPE html>
+<html lang="ar">  
 <head>  
 <meta charset="UTF-8">  
 <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@700&display=swap" rel="stylesheet">  
@@ -10,7 +11,7 @@ html, body{
     padding:0;  
     width:100%;  
     height:100%;  
-    
+    overflow:hidden;  
     font-family: 'Tajawal', Arial, sans-serif;  
 }  .side-text{
 position:absolute;
