--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ html, body{
     padding:0;  
     width:100%;  
     height:100%;  
-    overflow:hidden;  
+    overflow:auto;  
     font-family: 'Tajawal', Arial, sans-serif;  
 }  .side-text{
 position:absolute;
