--- a/index.html
+++ b/index.html
@@ -62,23 +62,25 @@ text-align:center;
 .red { background:#FF4D4D; color:white; }
 .yellow { background:#FFD700; color:black; }
 
-/* حاويات الأزرار */
-.left-buttons{
-position:absolute;
-left:10px;
-top:220px;
-display:flex;
-flex-direction: column;
-gap:10px;
+
+.left-buttons .button {
+transform: translateY(-50%) rotate(90deg); 
 }
+
 .right-buttons{
 position:absolute;
-right:10px;
-top:220px;
+left:3px; 
+top:calc(70% + 60px);
 display:flex;
 flex-direction: column;
-gap:10px;
+gap:15px;
 }
+
+
+.right-buttons .button {
+transform: translateY(-50%) rotate(90deg); / مثال: 15° دوران /
+} 
+
 
 /* زر رجوع */
 .reset-button{
