--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">  
 <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@700&display=swap" rel="stylesheet">  
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">  
+<img src="bj.jpg?v=2" alt="challenge">
 <title>صورة التحدي ثابتة</title>  
 <style>  
 html, body{  
