--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ color:black;
 text-shadow: none;
 pointer-events:none;
 white-space: nowrap;
-transform: translateY(-50%) rotate(50deg); /* هنا تتحكم في الدوران /
-}
+transform: translateY(-50%) rotate(50deg); 
+}   
 
 /* نص الأولاد على الشمال */
 .left-text{
