--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#1877f2">
 <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@700&display=swap" rel="stylesheet">
 <title>صورة التحدي ثابتة</title>
 <style>
@@ -210,6 +212,11 @@ function moveImage(direction, value){
         if(imageOffsetY > maxDown) imageOffsetY = maxDown;
     }
     document.querySelector('img').style.transform = `translateY(${imageOffsetY}px)`;
+}
+
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("sw.js")
+    .then(() => console.log("Service Worker Registered"));
 }
 </script>
 
