--- a/index.html
+++ b/index.html
@@ -141,7 +141,24 @@ img{
 </style>
 </head>
 <body>
-
+<button id="installBtn" style="
+position:absolute;
+bottom:20px;
+left:50%;
+transform:translateX(-50%);
+padding:12px 25px;
+font-size:16px;
+font-weight:bold;
+background:#28a745;
+color:white;
+border:none;
+border-radius:8px;
+cursor:pointer;
+display:none;
+z-index:20;
+">
+نزّل التطبيق
+</button>
 <!-- زر الرجوع -->
 <button class="reset-button" onclick="resetScores()">رجوع</button>  
 
@@ -218,6 +235,28 @@ if ("serviceWorker" in navigator) {
   navigator.serviceWorker.register("sw.js")
     .then(() => console.log("Service Worker Registered"));
 }
+
+let deferredPrompt;
+const installBtn = document.getElementById("installBtn");
+
+window.addEventListener("beforeinstallprompt", (e) => {
+  e.preventDefault();
+  deferredPrompt = e;
+  installBtn.style.display = "block";
+});
+
+installBtn.addEventListener("click", async () => {
+  if (deferredPrompt) {
+    deferredPrompt.prompt();
+    const { outcome } = await deferredPrompt.userChoice;
+    if (outcome === "accepted") {
+      console.log("User accepted install");
+    }
+    deferredPrompt = null;
+    installBtn.style.display = "none";
+  }
+});
+
 </script>
 
 </body>
