--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@ html, body{
     height:100%;
     overflow:auto;
     font-family: 'Tajawal', Arial, sans-serif;
+
+  background: linear-gradient(to bottom, #FE9D4BEA 50%, white 50%);
 }
+
 
 
 .side-text{
