--- a/index.html
+++ b/index.html
@@ -15,11 +15,8 @@ html, body{
     height:100%;
     overflow:auto;
     font-family: 'Tajawal', Arial, sans-serif;
-
-  background: linear-gradient(to bottom, #FE9D4BEA 50%, white 50%);
+  background: linear-gradient(to right, #3DE9F5 50%, #9B4DFF 50%);
 }
-
-
 
 .side-text{
 position:absolute;
