--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@ html, body{
     width:100%;
     height:100%;
     overflow:auto;
-    font-family: 'Tajawal', Arial, sans-serif;
-  background: linear-gradient(to right, #3DE9F5 50%, #9B4DFF 50%);
+    background: linear-gradient(
+    to bottom,
+    #3DE9F5 50%,
+    #9B4DFF 50%
+  );
 }
 
 .side-text{
