--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ html, body{
     overflow:auto;
     background: linear-gradient(
     to bottom,
-    #3DE9F5 50%,
-    #9B4DFF 50%
+    #9B4DFF 50%,
+    #3DE9F5 50%
   );
 }
 
